--- a/src/header.css
+++ b/src/header.css
@@ -8,6 +8,7 @@
     top:0;
 
     width: 100%;
+    background-image:url("../public/bug1.PNG");
     /* position: fixed;
     top: 0;
     width: 100%; */
@@ -28,6 +29,7 @@
   /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
   .header a.logo {
     font-size: 25px;
+    color:  rgb(224, 227, 41);
     font-weight: bold;
   }
   
